# takina

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  STANDARDS.md  _redirects  default.nix  docker-compose.yml  flake.nix  gallery.html  index.html  package.json  privacy.html  pyproject.toml  requirements.txt  ruff.toml  tos.html
.forgejo/: CODEOWNERS
.forgejo/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.forgejo/workflows/: docker.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml
nix/: module.nix
styles/: input.css  output.css
takina/: __main__.py  config.py
takina/cogs/: errors.py  help.py  owner-utils.py  prefix.py  settings.py
takina/cogs/fun/: dictionary.py  esnipe.py  fun.py  gary.py  ias.py  neko.py  roast.py  roasts.py  scount.py  snipe.py  topic.py  ubdict.py
takina/cogs/islam/: salah.py
takina/cogs/libs/: fate_responses.py  oclib.py  topics_list.py
takina/cogs/listeners/: github.py  haikus.py  honeypot.py  ping_response.py  quran.py  starboard.py  trigger_response.py
takina/cogs/minecraft/: hypixel.py  mcskin.py  server.py  wynncraft.py
takina/cogs/mod/: ban.py  kick.py  modlog.py  mute.py  nick.py  purge.py  reports.py  utils.py  warn.py
takina/cogs/sesp/awcc/: hof.py
takina/cogs/sesp/awcc/libs/: lib.py
takina/cogs/sesp/example/libs/: lib.py
takina/cogs/sesp/iad/: screw_om.py
takina/cogs/sesp/iad/libs/: lib.py
takina/cogs/sesp/isadev/: booster_perks.py  counting.py  lib.py  maintainer_stats.py  ping_iostpa.py  pr_channel.py  subdomains.py  suggestions.py
takina/cogs/sesp/isadev/libs/: lib.py
takina/cogs/sesp/theanimeflow/: art_contest.py
takina/cogs/sesp/theanimeflow/libs/: lib.py
takina/cogs/util/: afk.py  books.py  channels.py  dns.py  embed_builder.py  giveaways.py  info.py  mudae.py  qalc.py  reminders.py  remindme.py  roles.py  socials.py  steam.py  time.py  translate.py  utils.py  weather.py  wiki.py
takina/cogs/weebism/: anime.py  character.py  mal_profiles.py  mal_stats.py  mal_updates.py  manga.py  seasonals.py
