[project]
name = "takina"
version = "1.17.0"
description = "The cutest multipurpose Discord bot."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns==3.6.1",
    "aiohttp==3.11.9",
    "aladhan-py==1.2.2",
    "asyncpraw==7.8.1",
    "audioop-lts==0.2.1",
    "brotli==1.2.0",
    "distlib==0.3.9",
    "emoji==2.14.0",
    "filelock==3.16.1",
    "geopy==2.4.1",
    "google-books-api-wrapper==1.0.5",
    "motor>=3.7.1",
    "nextcord==3.1.1",
    "open-meteo==0.3.2",
    "orjson==3.11.5",
    "ping3==4.0.8",
    "platformdirs==4.3.6",
    "pygithub==2.6.1",
    "pymongo>=4.16.0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "setuptools==75.6.0",
    "tzfpy==1.0.0",
    "virtualenv==20.28.0",
    "whodap==0.1.12",
    "wynn-api==3.2.1",
]

[tool.setuptools]
packages = ["takina"]

