[project]
name = "takina"
version = "1.19.1"
description = "The cutest multipurpose Discord bot."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns==4.0.0",
    "aiohttp==3.13.5",
    "aladhan-py==1.2.2",
    "asyncpraw==7.8.1",
    "audioop-lts==0.2.2",
    "brotli==1.2.0",
    "distlib==0.4.0",
    "emoji==2.15.0",
    "filelock==3.29.0",
    "geopy==2.4.1",
    "google-books-api-wrapper==1.0.5",
    "motor>=3.7.1",
    "nextcord==3.1.1",
    "open-meteo==0.4.0",
    "orjson==3.11.8",
    "ping3==5.1.5",
    "platformdirs==4.9.6",
    "pygithub==2.9.1",
    "pymongo>=4.16.0",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "setuptools==82.0.1",
    "tzfpy==1.3.0",
    "virtualenv==21.3.0",
    "whodap==0.1.16",
    "wynn-api==3.2.1",
]

[tool.setuptools]
packages = ["takina"]

