[project]
name = "takina"
version = "1.23.5"
description = "The cutest multipurpose Discord bot."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns==4.0.4",
    "aiohttp==3.14.1",
    "aladhan-py==1.2.2",
    "asyncpraw==8.0.2",
    "audioop-lts==0.2.2",
    "brotli==1.2.0",
    "distlib==0.4.3",
    "emoji==2.15.0",
    "filelock==3.29.7",
    "geopy==2.4.1",
    "google-books-api-wrapper==1.0.5",
    "motor>=3.7.1",
    "nextcord==3.2.0",
    "open-meteo==0.4.0",
    "orjson==3.11.9",
    "ping3==5.1.5",
    "platformdirs==4.10.0",
    "pygithub==2.9.1",
    "pymongo>=4.16.0",
    "python-dotenv==1.2.2",
    "pytz==2026.2",
    "setuptools==83.0.0",
    "tzfpy==1.3.1",
    "virtualenv==21.6.1",
    "whodap==0.1.16",
    "wynn-api==3.2.1",
    "nltk==3.10.0",
]

[tool.setuptools]
packages = ["takina"]

